# CurateNSPond

./: .env.example  .gitignore  README.md  pyproject.toml
src/curate_ns_pond/: __init__.py  cli.py  fulltext.py  merge.py  resolution.py  settings.py  storage.py
src/curate_ns_pond/services/: __init__.py  entrez.py  pmc.py  pubmed.py  semantic_scholar.py
tests/: conftest.py  test_cli_fetch_fulltext.py  test_cli_merge_records.py  test_cli_resolve_ids.py  test_cli_search_pubmed.py  test_deduplication.py  test_fulltext_fetcher.py  test_identifier_resolution.py  test_pubmed_service.py  test_settings.py  test_storage.py
tests/cassettes/: fulltext_entrez.yaml  fulltext_semantic.yaml  test_cli_fetch_fulltext.yaml  test_cli_resolve_ids_writes_outputs.yaml  test_fulltext_fetcher_falls_back_to_ace.yaml  test_fulltext_fetcher_falls_back_to_entrez.yaml  test_fulltext_fetcher_prefers_pubget.yaml  test_fulltext_fetcher_with_semantic_metadata.yaml  test_resolver_merges_sources.yaml  test_resolver_records_errors.yaml  test_search_pubmed_writes_pmids.yaml  test_service_fetches_multiple_pages.yaml  test_service_raises_for_http_error.yaml
